@@ -62,6 +62,9 @@ void setlib_mainConfig(wzd_config_t *);
 List * getlib_contextList(void);
 void setlib_contextList(List *);
 
+int getlib_server_gid(void);
+void setlib_server_gid(int);
+
 int getlib_server_uid(void);
 void setlib_server_uid(int);
 
